--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,53 +1,34 @@
-<%- include('./partials/topSpeakers') %>
 <div class="container mt-4">
   <div class="row">
     <div class="col-md-8">
       <article class="article maincontent">
-        <h1>Who are we?</h1>
+        <h1>Meerkat Inventory Management</h1>
         <p>
-          The Roux Academy gets thousands of submissions every year for artists interesting in
-          participating in the CAC exhibits, and selects approximately 200 distinct pieces of
-          contemporary art for display in their collective exhibit. In addition, 12 individuals are
-          honored as Featured Artists - each being granted his or her own exhibit hall to display
-          entire collections or themed pieces.
-        </p>
-        <p>
-          Each Featured Artist has an opportunity to speak at one of our meetups and share his or
-          her vision, perspective, and techniques with attendees on a more personal level than at
-          our large conference. It is truly an honor to be a CAC Featured Artist and many past
-          students artists who were featured at CAC have gone on to brilliant careers in art.
+          Meerkat Inventory Management is a tool that enables Meerkat Admin team to mange the
+          devices in Meerkat System and the sysetm Infra structutre used for Device data collections
         </p>
       </article>
       <article class="article maincontent">
-        <h2 class="article-title">Get Busy!</h2>
-        <p>
-          If you want to keep up with what&apos;s going on with the group,
-          <a href="http://www.meetup.com/rouxmeet">join our meetup group</a>,
-          <a href="http://www.twitter.com/rouxmeet">follow us on twitter</a>. If you&apos;re in
-          FaceBook, you can also
-          <a href="http://www.facebook.com/rouxmeet">join our FaceBook group</a>.
-        </p>
+        <h2 class="article-title">Inventory Management Items</h2>
+        <P> Here are the Inventory Management Items </P>
+        <p><a href="./device">Device Managemet</a></p>
+
+        <p><a href="./collectorvm">Collector VM Management</a></p>
+
+        <p><a href="./snmpcollector">SNMP Collector Management</a></p>
       </article>
     </div>
 
     <aside class="col-md-4">
       <article class="sidebar">
-        <h1 class="sidebar-title">Who should come?</h1>
+        <h1 class="sidebar-title">Inventory Management Items</h1>
         <ul class="sidebar-body">
-          <li>Anybody interested in art and the creative industry</li>
-          <li>Painters, sculptors, photographers and graphic artists</li>
+          <li><a href="./device">Device Managemet</a></li>
+          <li><a href="./collectorvm">Collector VM Management</a></li>
           <li>
-            Those interested in meeting and making a connection with others in the local art scene.
+            <a href="./snmpcollector">SNMP Collector Management</a>
           </li>
         </ul>
-      </article>
-      <article class="sidebar">
-        <h1 class="sidebar-title">Artwork on display</h1>
-        <p class="sidebar-body">
-          While you attend the conference, head over to our gallery where you can check out some of
-          the work from our speakers.
-        </p>
-        <%- include('./partials/artwork') %>
       </article>
     </aside>
   </div>
